[metadata]
name = rmi.dispatch
description = A simple and efficient dispatch model.
;long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.10,<3.11
install_requires =
    bottleneck ~= 1.3
    numba >= 0.55.1,<0.57
    numexpr ~= 2.8
    numpy >= 1.18.5,<2
    pandas >= 1.4,< 1.6
    pandera ~= 0.12
    pyarrow>=7, <10
    rmi.etoolbox @ git+https://github.com/rmi-electricity/etoolbox.git

[options.packages.find]
where=src

[options.extras_require]
dev =
    black[jupyter] >= 22,<23
    black>=22.0,<22.11
    isort>=5.0,<5.11
    tox>=3.20,<3.27
doc =
    doc8>=0.9,<1.1
    sphinx>=4,!=5.1.0,<5.3.1
    sphinx-autoapi>=1.8,<2.1
    sphinx-autodoc-typehints
    sphinxcontrib-mermaid
    furo
    sphinx-issues>=1.2,<3.1
tests =
    ; Checks code for security issues
    bandit>=1.6,<1.8
    ; Lets us track what code is being tested
    coverage>=5.3,<6.6
    ; Ensures clean documentation formatting
    doc8>=0.9,<1.1
    ; A framework for linting & static analysis
    flake8>=4.0,<5.1
    ; Avoid shadowing Python built-in names
    flake8-builtins>=1.5,<2.1
    ; Ensure docstrings are formatted well
    flake8-docstrings>=1.5,<1.7
    ; Allow use of ReST in docstrings
    flake8-rst-docstrings>=0.2,<0.3
    ; Highlight use of old-style string formatting
    flake8-use-fstring>=1.0,<1.5
    ; Checks that code isn't overly complicated
    mccabe>=0.6,<0.8
    ; Static type checking
    mypy>=0.942,<0.983
    ; Require PEP8 compliant variable names
    pep8-naming>=0.12,<0.14
    ; Allow us to run pre-commit hooks in testing
    pre-commit>=2.9,<2.21
    ; Style guidelines for Python documentation
    pydocstyle>=5.1,<6.2
    pytest>=6.2,<7.2
    ; Allow automatic testing of scripts
    pytest-console-scripts>=1.1,<1.4
    ; Pytest plugin for working with coverage
    pytest-cov>=2.10,<4.1
    ; ReStructuredText linter
    rstcheck[sphinx,toml]>=5.0,<6.2
    ; Python test environment manager
    tox>=3.20,<3.27
;    pandas-stubs
types =
    types-setuptools
viz =
    plotly
    kaleido
